# nebla

./: ProjectHome.md
distribuidos/1c2013/: CMakeLists.txt
distribuidos/1c2013/EjemploRPC/: makefile2  msg_iv_client.c  msg_iv_server (copy).c
distribuidos/1c2013/fuentes_rpc/msg_ida/: msg_ida.h  msg_ida.x  msg_ida_clnt.c  msg_ida_proc.c  msg_ida_server.c  printmsg_ida.c  readme.txt
distribuidos/1c2013/fuentes_rpc/msg_iv/: Makefile  msg_iv_client  msg_iv_server  remprint_iv.c
distribuidos/1c2013/src/IPC/: AbstractPipe.cpp  LockFile.cpp  LockFile.h  Makefile  Semaphore.cpp  Semaphore.h  SharedMemory.h  SignalHandler.cpp  SignalHandler.h
distribuidos/1c2013/src/common/: Argv.cpp  Date.cpp  Object.cpp  StringUtils.h
distribuidos/1c2013/src/practicas/ej11/: Hidrogeno.h  Identificadores.h  Logger.cpp  Oxigeno.cpp  ProcesoLauncher.cpp  ProcesoTerminator.cpp  SorteadorEntero.cpp  log
distribuidos/1c2013/src/practicas/ej13/: Makefile  terminator.sh
distribuidos/1c2013/src/practicas/ej2/: Makefile  terminator.sh
distribuidos/1c2013/src/practicas/ej3 Concurrente/: ControladorCliente.cpp  ControladorCliente.h  ControladorTickets.h  ControladorVendedor.cpp  Launcher.cpp  common.h
distribuidos/1c2013/src/practicas/ej3 Distribuido/: ConfigTemplate  ControladorCliente.h  ControladorVendedor.cpp
distribuidos/1c2013/src/practicas/ej3 Memoria/: Config  ConfigTemplate  ControladorCliente.cpp  ControladorVendedor.h  Vendedor.cpp  common.h
distribuidos/1c2013/src/practicas/ej4/: terminator.cpp
distribuidos/1c2013/src/practicas/ej5/: launcher.cpp
distribuidos/1c2013/src/practicas/ej7/: Launcher.cpp  Makefile  common.h
distribuidos/1c2013/src/practicas/ej8/: Sequencer.cpp  launcher.cpp  terminator.cpp
distribuidos/1c2013/src/practicas/ej9/: Buffer.h  Launcher.cpp  Makefile  Productor.cpp
distribuidos/1c2013/tcp_nuevo/: enviar.cpp  tcpopact.cpp  tcpservc.cpp  tcpservertrans.cpp  tcpservi.cpp
distribuidos/Duran/ej1/: CMakeLists.txt
distribuidos/Duran/ej1/nbproject/: configurations.xml  project.xml
distribuidos/Duran/ej1/src/: ControladorAdministrador.h  Launcher.cpp
distribuidos/Duran/ej5/: CMakeLists.txt
distribuidos/Duran/ej5/src/: common.h
distribuidos/Duran/ej9/: CMakeLists.txt
distribuidos/Duran/ej9/nbproject/: configurations.xml
distribuidos/Duran/ej9/nbproject/private/: Default.properties  configurations.xml
distribuidos/Duran/ej9/src/: Terminator.cpp  common.h
distribuidos/EjGrupal/branches/Iteración_2/: CMakeLists.txt
distribuidos/EjGrupal/branches/Iteración_2/src/: Cliente.cpp  Common.h  Launcher.cpp  LauncherClientes.cpp  LauncherDespacho.cpp  Terminator.cpp  TerminatorClientes.cpp  TerminatorNumerador.cpp  Vendedor.cpp  middlewareCommon.h
distribuidos/EjGrupal_Robot14/: CMakeLists.txt
distribuidos/EjGrupal_Robot14/nbproject/: configurations.xml
distribuidos/EjGrupal_Robot14/src/: Launcher.cpp  Robot11.cpp  common.h
distribuidos/EjGrupal_Robot14/src/API/Robot11/: ControllerRobot11.h
distribuidos/EjGrupal_Robot14/src/API/Robot14/: ControllerRobot14.cpp  ControllerRobot14.h
distribuidos/EjGrupal_Robot14/src/API/Robot16/: ControllerRobot16.cpp  IControllerRobot16.h
distribuidos/EjGrupal_Robot14/src/CSO/: readme.txt
distribuidos/EjGrupal_Robot14/src/CSO/ConfigFileParser/: ConfigFileParser.cpp  ConfigFileParser.h  EqualLineProcessor.cpp
distribuidos/EjGrupal_Robot14/src/CSO/IPCs/: Semaphore.cpp  SharedMemory.h
distribuidos/EjGrupal_Robot14/src/CSO/Logger/: LockFile.h
distribuidos/EjGrupal_Robot14/src/Objects/: Cinta.h
distribuidos/ejGrupalParteFede/: CMakeLists.txt
distribuidos/ejGrupalParteFede/src/: AlmacenPiezas.cpp  Cliente.cpp  CreadorIPC.cpp  Vendedor.cpp
distribuidos/ejGrupalParteFede/src/Objetos/: ControladorAlmacenPiezas.cpp  ControladorVendedor.cpp  SmMemAlmacenProductosTerminados.cpp
distribuidos/ejGrupalParteFede/src/include/: Cola.h  ControladorVendedor.h  Parser.h  Semaforo.h  SmMemAlmacenProductosTerminados.h  const.h
trunk/distribuidos/Duran/ej1/: CMakeLists.txt  Makefile  PuertaEntrada.cpp  common.h
trunk/distribuidos/Duran/ej1/src/: Administrador.cpp  PuertaSalida.cpp  Terminator.cpp  common.h
trunk/distribuidos/Duran/ej3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
trunk/distribuidos/Duran/ej3/nbproject/: project.xml
trunk/distribuidos/Duran/ej3/src/: EstacionSospechosos.cpp  EstacionVerificacion.cpp  Launcher.cpp  Persona.cpp  common.h
trunk/distribuidos/Duran/ej8/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
trunk/distribuidos/Duran/ej8/nbproject/: configurations.xml  project.xml
trunk/distribuidos/Duran/ej8/src/: Almacenadora.cpp  Embotelladora.cpp  Etiquetadora.cpp  Launcher.cpp  Tapadora.cpp  Terminator.cpp  common.h
trunk/distribuidos/Duran/ej9/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
trunk/distribuidos/Duran/ej9/nbproject/: project.xml
trunk/distribuidos/Duran/ej9/src/: Launcher.cpp  Procesador.cpp  common.h
trunk/distribuidos/EjGrupal/: CMakeCache.txt  CMakeLists.txt  odc
trunk/distribuidos/EjGrupal/branches/Iteracion_1/: CMakeLists.txt
trunk/distribuidos/EjGrupal/branches/Iteración_2/: CMakeLists.txt
trunk/distribuidos/EjGrupal/branches/Iteración_3/: CMakeLists.txt
trunk/distribuidos/EjGrupal/branches/Iteración_4/: CMakeLists.txt  initRpc.sh
trunk/distribuidos/EjGrupal/nbproject/: configurations.xml
trunk/distribuidos/EjGrupal/nbproject/private/: configurations.xml  private.xml
trunk/distribuidos/EjGrupal/src/: AlmacenPiezas.cpp  Cliente.cpp  Common.h  ControladorRobot5Agv.cpp  ControladorRobot5Cinta.cpp  Despacho.cpp  Launcher.cpp  RepositorGabinetes.cpp  Robot11.cpp  Robot12.cpp  Robot16.cpp  Robot16_Cinta15.cpp  Robot16_Despacho.cpp  Robot5-Agv.cpp  Robot5-Cinta.cpp  Robot5.cpp  Robot5AGV.cpp  Robot5Cinta.cpp  Terminator.cpp  Vendedor.cpp
trunk/distribuidos/robot12-14yAGV/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
trunk/distribuidos/robot12-14yAGV/nbproject/: configurations.xml
trunk/distribuidos/robot12-14yAGV/src/: MockRobot5Cinta.cpp  Robot11.cpp
(+1120 files in other folders)
