cmake_minimum_required (VERSION 2.8.7)
project("Ejercicio 7")

set(SRC_DIR src/)
set(OUT_DIR out/)

file(MAKE_DIRECTORY ${OUT_DIR})

set(COMPILE_FLAGS "-g -Wall -pedantic")
add_definitions(${COMPILE_FLAGS})

include_directories("${SRC_DIR}")

include_directories("${SRC_DIR}API")
include_directories("${SRC_DIR}API/AGV")
include_directories("${SRC_DIR}API/Objects")
include_directories("${SRC_DIR}API/Robot5")
include_directories("${SRC_DIR}API/Robot5/CintaTransportadora")

include_directories("${SRC_DIR}API/Robot11")
include_directories("${SRC_DIR}API/Robot12")
include_directories("${SRC_DIR}API/Robot14")
include_directories("${SRC_DIR}API/Robot14/State")
include_directories("${SRC_DIR}API/Robot16")
include_directories("${SRC_DIR}API/Despacho")
include_directories("${SRC_DIR}API/Cliente")
include_directories("${SRC_DIR}API/Vendedor")
include_directories("${SRC_DIR}API/AlmacenPiezas")

include_directories("${SRC_DIR}Exceptions")

include_directories("${SRC_DIR}IPCs")
include_directories("${SRC_DIR}IPCs/IPCObject")
include_directories("${SRC_DIR}IPCs/IPCAbstractos")
include_directories("${SRC_DIR}IPCs/IPCAbstractos/AbstractMessageQueue")
include_directories("${SRC_DIR}IPCs/IPCAbstractos/MessageQueue")
include_directories("${SRC_DIR}IPCs/IPCAbstractos/AbstractSharedMemory")
include_directories("${SRC_DIR}IPCs/IPCAbstractos/SharedMemory")
include_directories("${SRC_DIR}IPCs/IPCTemplate")
include_directories("${SRC_DIR}IPCs/Barrios")
include_directories("${SRC_DIR}IPCs/Semaphore")

include_directories("${SRC_DIR}Logger")

include_directories("${SRC_DIR}Parser")

aux_source_directory("${SRC_DIR}API"                                     COMMON_SRC)
aux_source_directory("${SRC_DIR}API/Objects"                             COMMON_SRC)
aux_source_directory("${SRC_DIR}API/AGV"                                 COMMON_SRC)
aux_source_directory("${SRC_DIR}API/Robot5"                              COMMON_SRC)
aux_source_directory("${SRC_DIR}API/Robot5/CintaTransportadora"          COMMON_SRC)
aux_source_directory("${SRC_DIR}API/Robot11"                             COMMON_SRC)
aux_source_directory("${SRC_DIR}API/Robot12"                             COMMON_SRC)
aux_source_directory("${SRC_DIR}API/Robot14"                             COMMON_SRC)
aux_source_directory("${SRC_DIR}API/Robot14/State"                       COMMON_SRC)
aux_source_directory("${SRC_DIR}API/Robot16"                             COMMON_SRC)               
aux_source_directory("${SRC_DIR}API/Despacho"                            COMMON_SRC)
aux_source_directory("${SRC_DIR}API/Cliente"                             COMMON_SRC)
aux_source_directory("${SRC_DIR}API/Vendedor"                            COMMON_SRC)
aux_source_directory("${SRC_DIR}API/AlmacenPiezas"                       COMMON_SRC)

aux_source_directory("${SRC_DIR}Exceptions"                              COMMON_SRC)
aux_source_directory("${SRC_DIR}IPCs"                                    COMMON_SRC)
aux_source_directory("${SRC_DIR}IPCs/IPCObject"                          COMMON_SRC)
aux_source_directory("${SRC_DIR}IPCs/IPCTemplate"                        COMMON_SRC)
aux_source_directory("${SRC_DIR}IPCs/IPCAbstractos"                      COMMON_SRC)
aux_source_directory("${SRC_DIR}IPCs/IPCAbstractos/AbstractMessageQueue" COMMON_SRC)
aux_source_directory("${SRC_DIR}IPCs/IPCAbstractos/MessageQueue"         COMMON_SRC)
aux_source_directory("${SRC_DIR}IPCs/IPCAbstractos/AbstractSharedMemory" COMMON_SRC)
aux_source_directory("${SRC_DIR}IPCs/IPCAbstractos/SharedMemory"         COMMON_SRC)
aux_source_directory("${SRC_DIR}IPCs/Semaphore"                          COMMON_SRC)
aux_source_directory("${SRC_DIR}IPCs/Barrios"                            COMMON_SRC)

aux_source_directory("${SRC_DIR}Logger"                                  COMMON_SRC)
aux_source_directory("${SRC_DIR}Parser"                                  COMMON_SRC)


add_executable(${OUT_DIR}AGV                    ${SRC_DIR}AGV.cpp                    ${COMMON_SRC})
add_executable(${OUT_DIR}Terminator             ${SRC_DIR}Terminator.cpp             ${COMMON_SRC})
add_executable(${OUT_DIR}Launcher               ${SRC_DIR}Launcher.cpp               ${COMMON_SRC})
add_executable(${OUT_DIR}Robot5		        ${SRC_DIR}Robot5.cpp   	             ${COMMON_SRC})
add_executable(${OUT_DIR}ControladorRobot5Agv   ${SRC_DIR}ControladorRobot5Agv.cpp   ${COMMON_SRC})
add_executable(${OUT_DIR}ControladorRobot5Cinta	${SRC_DIR}ControladorRobot5Cinta.cpp ${COMMON_SRC})
add_executable(${OUT_DIR}Robot11		${SRC_DIR}Robot11.cpp   	     ${COMMON_SRC})
add_executable(${OUT_DIR}Robot12		${SRC_DIR}Robot12.cpp   	     ${COMMON_SRC})
add_executable(${OUT_DIR}Robot14		${SRC_DIR}Robot14.cpp   	     ${COMMON_SRC})
add_executable(${OUT_DIR}Robot16		${SRC_DIR}Robot16.cpp   	     ${COMMON_SRC})
add_executable(${OUT_DIR}Despacho		${SRC_DIR}Despacho.cpp   	     ${COMMON_SRC})

add_executable(${OUT_DIR}Vendedor		${SRC_DIR}Vendedor.cpp	             ${COMMON_SRC})
add_executable(${OUT_DIR}AlmacenPiezas		${SRC_DIR}AlmacenPiezas.cpp	     ${COMMON_SRC})
add_executable(${OUT_DIR}Cliente		${SRC_DIR}Cliente.cpp		     ${COMMON_SRC})